--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.5.0",
+    "body-parser": "^1.17.2",
     "clone": "^2.0.0",
+    "cors": "^2.8.4",
     "eth-block-tracker": "^2.0.1",
     "eth-sig-util": "^1.2.1",
     "ethereumjs-block": "^1.2.2",
     "ethereumjs-tx": "^1.2.0",
     "ethereumjs-util": "^5.1.1",
     "ethereumjs-vm": "^2.0.2",
+    "express": "^4.15.3",
     "fetch-ponyfill": "^4.0.0",
     "json-rpc-error": "^2.0.0",
     "json-stable-stringify": "^1.0.1",
